--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = AnkiSiyuan
-version = 0.0.3
+version = 0.0.4
 author = Clouder
 author_email = clouder0@outlook.com
 description = Sync SiYuan with Anki
@@ -18,5 +18,6 @@ classifiers =
 packages = find:
 install_requires =
     AnkiIn
+    siyuanhelper
     aiohttp
 python_requires = >=3.6
