--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = AnkiSiyuan
-version = 0.0.4
+version = 0.0.5
 author = Clouder
 author_email = clouder0@outlook.com
 description = Sync SiYuan with Anki
@@ -18,6 +18,6 @@ classifiers =
 packages = find:
 install_requires =
     AnkiIn
-    siyuanhelper
+    siyuanhelper >= 0.0.3
     aiohttp
 python_requires = >=3.6
