--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,6 @@ classifiers =
 packages = find:
 install_requires =
     AnkiIn
-    siyuanhelper = 0.0.3
+    siyuanhelper ==0.0.3
     aiohttp
 python_requires = >=3.6
