--- a/.github/workflows/nuitka-build.yml
+++ b/.github/workflows/nuitka-build.yml
@@ -39,27 +39,12 @@ jobs:
         if: runner.os == 'Windows'
         shell: powershell
         run: |
-          $ErrorActionPreference = 'Stop'
-          $args = @()
-          $args += @('--standalone')
-          $args += @('--onefile')
-          $args += @('--assume-yes-for-downloads')
-          $args += @('--output-dir="build"')
-          $args += @('--follow-imports')
-          python -m nuitka $args "src/ankisiyuan"
+          python -m nuitka --standalone --onefile --assume-yes-for-downloads --output-dir=build --follow-imports .\src\ankisiyuan
       - name: Build Executable (macOS and Linux)
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
         shell: bash
         run: |
-          ARGS=""
-          SPACE=" "
-          $args = @()
-          $args += @('--standalone')
-          $args += @('--onefile')
-          $args += @('--assume-yes-for-downloads')
-          $args += @('--output-dir="build"')
-          $args += @('--follow-imports')
-          python -m nuitka $ARGS "src/ankisiyuan"
+          python -m nuitka --standalone --onefile --assume-yes-for-downloads --output-dir=build --follow-imports src/ankisiyuan
           
       # Uploads artifacts
       - name: "Upload Artifacts"
